ansible var config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,4 @@
 [defaults]
 host_key_checking=false
 
-# testing
-# testing
-# testing
-# testing
+/var/lib/jenkins/workspace/save_artifacts=/home/ubuntu/ansible-config-artifact
