--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -7,8 +7,8 @@
 #- import_playbook: ../static-assignments/common-del.yml
 
 
-- hosts: all
-- import_playbook: ../static-assignments/common.yml
+#- hosts: all
+#- import_playbook: ../static-assignments/common.yml
 
 - hosts: uat-webservers
 - import_playbook: ../static-assignments/uat-webservers.yml
