--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,8 @@
 [defaults]
 host_key_checking=false
 
-/var/lib/jenkins/workspace/save_artifacts=/home/ubuntu/ansible-config-artifact
+# /var/lib/jenkins/workspace/save_artifacts=/home/ubuntu/ansible-config-artifact
+
+inventory_path=/home/ubuntu/ansible-config-mgt/inventory
+
+roles_path=/home/ubuntu/ansible-config-mgt/roles
