--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -5,7 +5,7 @@
 
 #- hosts: all
 #- import_playbook: ../static-assignments/common-del.yml
-
+# samples
 
 #- hosts: all
 #- import_playbook: ../static-assignments/common.yml
