--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -18,7 +18,7 @@
 - hosts: all
 - name: Include dynamic variables 
   tasks:
-  import_playbook: ../static-assignments/common.yml 
+  import_playbook: ../static-assignments/db.yml 
   include: ../dynamic-assignments/env-vars.yml
   tags:
     - always
