--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,4 +1,3 @@
-
 ---
 #- hosts: all
 #- import_playbook: ../static-assignments/common.yml
@@ -15,13 +14,13 @@
 #git- import_playbook: ../static-assignments/uat-webservers.yml
 
 
-- hosts: all
-- name: Include dynamic variables 
-   #tasks:
-   #import_playbook: ../static-assignments/db.yml 
-   #include: ../dynamic-assignments/env-vars.yml
-   #tags:
-    #- always
+# - hosts: all
+# - name: Include dynamic variables 
+#    #tasks:
+#    #import_playbook: ../static-assignments/db.yml 
+#    #include: ../dynamic-assignments/env-vars.yml
+#    #tags:
+#     #- always
 
 #-  hosts: webservers
 #- name: Webserver assignment
