--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -6,6 +6,14 @@
 #- import_playbook: ../static-assignments/common-del.yml
 # samples
 
+
+
+- hosts: all
+- name: Include dynamic variables
+  include: ../dynamic-assignments/env-vars.yml
+  tags:
+    - always 
+    
 - hosts: db
 - name: installing db
 - import_playbook: ../static-assignments/db.yml
@@ -14,8 +22,8 @@
 #git- import_playbook: ../static-assignments/uat-webservers.yml
 
 
-# - hosts: all
-# - name: Include dynamic variables 
+ #- hosts: all
+ #- name: Include dynamic variables 
 #    #tasks:
 #    #import_playbook: ../static-assignments/db.yml 
 #    #include: ../dynamic-assignments/env-vars.yml
