--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -6,7 +6,7 @@
 #172.31.41.13 ansible_ssh_user='ec2-user'
 
 [db]
-172.31.47.134 ansible_ssh_user='ec2-user'
+172.31.41.198 ansible_ssh_user='ubuntu'
 
 #[lb]
 #172.31.45.59 ansible_ssh_user='ubuntu'
