--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,37 +1,31 @@
 ---
-#- hosts: all
-#- import_playbook: ../static-assignments/common.yml
+# - hosts: all
+# - import_playbook: ../static-assignments/common-del.yml
 
-#- hosts: all
-#- import_playbook: ../static-assignments/common-del.yml
-# samples
-
+# - hosts: all
+# - name: Include dynamic variables 
+#   tasks:
+#   import_playbook: ../static-assignments/common.yml 
+#   include: ../dynamic-assignments/env-vars.yaml
+#   tags:
+#     - always
 
 
 - hosts: all
-- name: Include dynamic variables
+- name: Include dynamic variables 
   include: ../dynamic-assignments/env-vars.yml
   tags:
-    - always 
-    
+    - always
+
+
+- hosts: uat-webservers
+- import_playbook: ../static-assignments/uat-webservers.yml
+
 - hosts: db
-#- name: installing db
-- import_playbook: ../static-assignments/db.yml
+- import_playbook: ../static-assignments/database.yml
 
-#- hosts: uat-webservers
-#git- import_playbook: ../static-assignments/uat-webservers.yml
-
-
- #- hosts: all
- #- name: Include dynamic variables 
-#    #tasks:
-#    #import_playbook: ../static-assignments/db.yml 
-#    #include: ../dynamic-assignments/env-vars.yml
-#    #tags:
-#     #- always
-
-#-  hosts: webservers
-#- name: Webserver assignment
-# import_playbook: ../static-assignments/webservers.yml
-
+- hosts: lb
+- name: Loadbalancers assignment
+  import_playbook: ../static-assignments/loadbalancer.yml
+  when: load_balancer_is_required 
 
