--- a/roles/nginx-lb/defaults/main.yml
+++ b/roles/nginx-lb/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+enable_nginx_lb: true
+load_balancer_is_required: true
+
 # Used only for Debian/Ubuntu installation, as the -t option for apt.
 nginx_default_release: ""
 
@@ -78,14 +81,14 @@ nginx_vhosts: []
 #   template: "" # Can be used to override the `nginx_vhost_template` per host.
 #   state: "absent" # To remove the vhost configuration.
 
-nginx_upstreams: []
-# - name: myapp1
-#   strategy: "ip_hash" # "least_conn", etc.
-#   keepalive: 16 # optional
-#   servers:
-#     - "srv1.example.com"
-#     - "srv2.example.com weight=3"
-#     - "srv3.example.com"
+nginx_upstreams: 
+ - name: myapp1
+   strategy: "ip_hash" # "least_conn", etc.
+   keepalive: 16 # optional
+   servers:
+     - "172.31.44.39"
+     - "172.31.45.59"
+     - "srv3.example.com"
 
 nginx_log_format: |-
   '$remote_addr - $remote_user [$time_local] "$request" '
