--- a/static-assignments/nginx-lb.yml
+++ b/static-assignments/nginx-lb.yml
@@ -2,4 +2,4 @@
 - hosts: lb
   roles:
     - { role: nginx-lb, when: enable_nginx-lb and load_balancer_is_required }
-    - { role: apache, when: enable_apache-lb and load_balancer_is_required }
+    - { role: apache-lb, when: enable_apache-lb and load_balancer_is_required }
