--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
 # Variable configuration.
-- include_tasks: variables.yml
+-  variables.yml
 
 # Setup/install tasks.
-- include_tasks: setup-RedHat.yml
+- setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
-- include_tasks: setup-Debian.yml
+- setup-Debian.yml
   when: ansible_os_family == 'Debian'
 
-- include_tasks: setup-Archlinux.yml
+- setup-Archlinux.yml
   when: ansible_os_family == 'Archlinux'
 
 - name: Check if MySQL packages were installed.
@@ -19,8 +19,8 @@
       or (arch_mysql_install_packages is defined and arch_mysql_install_packages.changed) }}"
 
 # Configure MySQL.
-- include_tasks: configure.yml
-- include_tasks: secure-installation.yml
-- include_tasks: databases.yml
-- include_tasks: users.yml
-- include_tasks: replication.yml
+- configure.yml
+- secure-installation.yml
+- databases.yml
+- users.yml
+- replication.yml
