--- a/roles/nginx-lb/tasks/main.yml
+++ b/roles/nginx-lb/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Variable setup.
 - name: Include OS-specific variables.
-  include_vars: "{{ ansible_os_family }}.yml"
+  "{{ ansible_os_family }}.yml"
 
 - name: Define nginx_user.
   set_fact:
@@ -9,22 +9,22 @@
   when: nginx_user is not defined
 
 # Setup/install tasks.
-- include_tasks: setup-RedHat.yml
+- setup-RedHat.yml
   when: ansible_os_family == 'RedHat' or ansible_os_family == 'Rocky' or ansible_os_family == 'AlmaLinux'
 
-- include_tasks: setup-Ubuntu.yml
+- setup-Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
 
-- include_tasks: setup-Debian.yml
+- setup-Debian.yml
   when: ansible_os_family == 'Debian'
 
-- include_tasks: setup-FreeBSD.yml
+- setup-FreeBSD.yml
   when: ansible_os_family == 'FreeBSD'
 
-- include_tasks: setup-OpenBSD.yml
+- setup-OpenBSD.yml
   when: ansible_os_family == 'OpenBSD'
 
-- include_tasks: setup-Archlinux.yml
+- setup-Archlinux.yml
   when: ansible_os_family == 'Archlinux'
 
 # Vhost configuration.
