--- a/roles/nginx-lb/tasks/main.yml
+++ b/roles/nginx-lb/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Include OS-specific variables.
   "{{ ansible_os_family }}.yml"
 
-- name: Define nginx_user.
+name: Define nginx_user.
   set_fact:
     nginx_user: "{{ __nginx_user }}"
   when: nginx_user is not defined
@@ -24,7 +24,7 @@
 - setup-OpenBSD.yml
   when: ansible_os_family == 'OpenBSD'
 
-- setup-Archlinux.yml
+-setup-Archlinux.yml
   when: ansible_os_family == 'Archlinux'
 
 # Vhost configuration.
