--- a/roles/apache-lb/tasks/main.yml
+++ b/roles/apache-lb/tasks/main.yml
@@ -15,7 +15,7 @@
   when: apache_packages is not defined
 
 # Setup/install tasks.
-- "setup-{{ ansible_os_family }}.yml"
+- include_taske: "setup-{{ ansible_os_family }}.yml"
 
 # Figure out what version of Apache is installed.
 - name: Get installed version of Apache.
@@ -38,7 +38,7 @@
 
 # Configure Apache.
 - name: Configure Apache.
- "configure-{{ ansible_os_family }}.yml"
+ include_taske: "configure-{{ ansible_os_family }}.yml"
 
 - name: Ensure Apache has selected state and enabled on boot.
   service:
