--- a/roles/nginx-lb/tasks/main.yml
+++ b/roles/nginx-lb/tasks/main.yml
@@ -3,28 +3,28 @@
 - name: Include OS-specific variables.
   "{{ ansible_os_family }}.yml"
 
-name: Define nginx_user.
+- name: Define nginx_user.
   set_fact:
     nginx_user: "{{ __nginx_user }}"
   when: nginx_user is not defined
 
 # Setup/install tasks.
-- setup-RedHat.yml
+- include_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat' or ansible_os_family == 'Rocky' or ansible_os_family == 'AlmaLinux'
 
-- setup-Ubuntu.yml
+- include_tasks: setup-Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
 
-- setup-Debian.yml
+- include_task: setup-Debian.yml
   when: ansible_os_family == 'Debian'
 
-- setup-FreeBSD.yml
+- include_taske: setup-FreeBSD.yml
   when: ansible_os_family == 'FreeBSD'
 
-- setup-OpenBSD.yml
+- include_taske: setup-OpenBSD.yml
   when: ansible_os_family == 'OpenBSD'
 
--setup-Archlinux.yml
+- include_taske: setup-Archlinux.yml
   when: ansible_os_family == 'Archlinux'
 
 # Vhost configuration.
