--- a/roles/apache-lb/tasks/main.yml
+++ b/roles/apache-lb/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 # Include variables and define needed variables.
 - name: Include OS-specific variables.
-  "{{ ansible_os_family }}.yml"
+  include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Include variables for Amazon Linux.
-  "AmazonLinux.yml"
+  include_vars: "AmazonLinux.yml"
   when:
     - ansible_distribution == "Amazon"
     - ansible_distribution_major_version == "NA"
@@ -15,7 +15,7 @@
   when: apache_packages is not defined
 
 # Setup/install tasks.
-- include_taske: "setup-{{ ansible_os_family }}.yml"
+- include_tasks: "setup-{{ ansible_os_family }}.yml"
 
 # Figure out what version of Apache is installed.
 - name: Get installed version of Apache.
@@ -29,16 +29,16 @@
     apache_version: "{{ _apache_version.stdout.split()[2].split('/')[1] }}"
 
 - name: Include Apache 2.2 variables.
-  apache-22.yml
+  include_vars: apache-22.yml
   when: "apache_version.split('.')[1] == '2'"
 
 - name: Include Apache 2.4 variables.
-  apache-24.yml
+  include_vars: apache-24.yml
   when: "apache_version.split('.')[1] == '4'"
 
 # Configure Apache.
 - name: Configure Apache.
- include_taske: "configure-{{ ansible_os_family }}.yml"
+  include_tasks: "configure-{{ ansible_os_family }}.yml"
 
 - name: Ensure Apache has selected state and enabled on boot.
   service:
