--- a/roles/apache-lb/defaults/main.yml
+++ b/roles/apache-lb/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 apache_enablerepo: ""
-enable_apache_lb: false
-load_balancer_is_required: false
+enable_apache_lb: true
+load_balancer_is_required: true
 apache_listen_ip: "*"
 apache_listen_port: 80
 apache_listen_port_ssl: 443
