--- a/env-vars/dev.yml
+++ b/env-vars/dev.yml
@@ -1,3 +1,7 @@
 ---
-enable_apache_lb: true
+#enable_apache_lb: true
+#load_balancer_is_required: true
+
+
+enable_nginx_lb: true
 load_balancer_is_required: true
